[package]
name = "find-idl"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-cli = { version = "2.0.0" }
solana-cli-config = { version = "2.0.0" }
solana-cli-output = { version = "2.0.0" }
solana-client = { version = "2.0.0" }
solana-program = { version = "2.0.0" }
solana-sdk = { version = "2.0.0" }
